fix(Dialogs): Fix z-index on dialogs

--- a/src/richtext.scss
+++ b/src/richtext.scss
@@ -71,6 +71,7 @@ $highlight: #3498db;
         min-height: 20px;
         background-color: inherit;
         border-bottom: #EFEFEF solid 1px;
+        z-index: 1;
 
         .richText-length {
             font-family: Verdana, Helvetica, sans-serif;
